# sleepy

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  config.py  config.toml.example  config_models.py  data.py  docker-compose.yml  errors.py  logger.py  main.py  models.py  plugin.py  pyproject.toml  requirements.txt  start.py  utils.py
.github/ISSUE_TEMPLATE/: 1-bug-report.yml
client/: README.md  autoxjs_device.js  autoxjs_music_status_handle.js
client/SleepyXposed/: SleepyXposed.apk
client/magisk/: README.md  cache.txt  config.cfg  customize.sh  module.prop  service.sh
client/magisk-mod/: README.md  config.cfg  customize.sh  module.prop  service.sh
data/: auto_install.json
plugins/custom-background-img/: __init__.py  pyproject.toml
plugins/device-auth/: __init__.py  pyproject.toml
plugins/device-status/: __init__.py  pyproject.toml
plugins/example_plugin/: .sleepymetadata  __init__.py  pyproject.toml
plugins/font/: README.md  __init__.py
plugins/frontend/: __init__.py  pyproject.toml
plugins/github_stats/: README.md  __init__.py
plugins/hitokoto/: README.md  __init__.py  inject.js
plugins/lantern/: README.md  __init__.py  inject.css  inject.html
plugins/main-status/: __init__.py  pyproject.toml
plugins/mplayer/: README.md  __init__.py  aplayer.js  mplayer.css  mplayer.html  mplayer.js
plugins/online_count/: README.md  __init__.py  inject.js
plugins/plugins-manager/: README.md  __init__.py  pyproject.toml
plugins/robots/: README.md  __init__.py
plugins/screen_usage_time/: README.md  __init__.py
plugins/steam/: README.md  __init__.py
plugins/theme_detect/: __init__.py
templates/: index.html
(+27 files in other folders)
